chore: fix page height and width overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,6 @@
 @import "tailwindcss";
 
 body {
-  width: 100vw;
   height: 100vh;
   height: 100dvh;
   display: grid;
